# bedrock-rs

./: .gitignore  .gitmodules  Cargo.toml  README.md
crates/auth/: Cargo.toml
crates/auth/src/: auth_error.rs  auth_identity.rs  auth_oidc.rs  auth_payload.rs  auth_type.rs  lib.rs
crates/level/: Cargo.toml  build.rs
crates/level/benches/: benchmark.rs  subchunk.rs  unpack.rs
crates/level/ffi/: CMakeLists.txt  ffi.cpp  ffi.h
crates/level/src/: biome.rs  bits.rs  error.rs  greedy.rs  key.rs  lazy.rs  lib.rs  packed.rs  player.rs  settings.rs  subchunk.rs  traits.rs  types.rs  unpacked.rs  unpacker.rs
crates/level/src/mojang/: db.rs  ffi.rs  iter.rs  mod.rs
crates/level/src/rusty/: db.rs
crates/level/tests/: load.rs  simd.rs  test.rs
crates/network/: Cargo.toml
crates/network/src/: codec.rs  compression.rs  encryption.rs  error.rs  lib.rs  listener.rs
crates/network/src/connection/: mod.rs
crates/network/src/connection/shard/: arc.rs  task.rs
crates/network/src/transport/: connection.rs  listener.rs
crates/proto/: Cargo.toml
crates/proto/src/: codec.rs  encryption.rs  info.rs  lib.rs  listener.rs
crates/proto/src/version/: mod.rs  proto_version.rs  versions.rs
crates/proto/src/version/unknown/: mod.rs
crates/proto/src/version/unknown/packets/: request_network_settings.rs
crates/proto/src/version/v662/: gamepackets.rs  info.rs  mod.rs
crates/proto/src/version/v662/enums/: actor_block_sync_message_id.rs  actor_data_ids.rs  actor_flags.rs  boss_event_update_type.rs  code_builder_storage.rs  command_block_mode.rs  command_output_type.rs  command_parameter_option.rs  crafting_data_entry_type.rs  crafting_type.rs  data_item_type.rs  difficulty.rs  game_type.rs  generator_type.rs  hud_element.rs  identity_definition_type.rs  inventory_right_tab_index.rs  inventory_source_flags.rs  inventory_source_type.rs  item_descriptor_type.rs  item_release_inventory_transaction_type.rs  item_stack_net_result.rs  item_stack_request_action_type.rs  item_use_on_actor_inventory_transaction_type.rs  level_event.rs  level_sound_event_type.rs  mod.rs  new_interaction_model.rs  particle_type.rs  player_action_type.rs  player_list_packet_type.rs  resource_pack_response.rs  score_packet_type.rs  scoreboard_identity_packet_type.rs  show_store_offer_redirect_type.rs  soft_enum_update_type.rs  text_packet_type.rs  ui_profile.rs
crates/proto/src/version/v662/packets/: actor_event.rs  actor_pick_request.rs  add_actor.rs  add_behaviour_tree.rs  add_item_actor.rs  add_painting.rs  add_player.rs  add_volume_entity.rs  agent_action_event.rs  agent_animation.rs  animate.rs  animate_entity.rs  anvil_damage.rs  automation_client_connect.rs  available_actor_identifiers.rs  available_commands.rs  biome_definition_list.rs  block_actor_data.rs  block_event.rs  block_pick_request.rs  book_edit.rs  boss_event.rs  camera.rs  camera_instruction.rs  camera_presets.rs  camera_shake.rs  change_dimension.rs  change_mob_property.rs  chunk_radius_updated.rs  client_bound_debug_renderer.rs  client_bound_map_item_data.rs  client_cache_blob_status.rs  client_cache_miss_response.rs  client_cache_status.rs  client_to_server_handshake.rs  code_builder.rs  code_builder_source.rs  command_block_update.rs  command_output.rs  command_request.rs  (+155 more)
crates/proto/src/version/v662/types/: actor_link.rs  actor_runtime_id.rs  actor_unique_id.rs  adventure_settings.rs  base_description.rs  base_game_version.rs  camera_instruction.rs  camera_presets.rs  chunk_pos.rs  command_origin_data.rs  crafting_data_entry.rs  data_item.rs  dimension_definition_group.rs  education_level_settings.rs  experiments.rs  game_rules_changed_packet_data.rs  inventory_action.rs  inventory_source.rs  inventory_transaction.rs  item_enchants.rs  item_instance_user_data.rs  item_stack_request_slot_info.rs  item_stack_response_container_info.rs  item_stack_response_info.rs  item_stack_response_slot_info.rs  level_settings.rs  map_item_tracked_actor_unique_id.rs  material_reducer_data_entry.rs  mod.rs  move_actor_absolute_data.rs  move_actor_delta_data.rs  network_item_instance_descriptor.rs  network_item_stack_descriptor.rs  packed_item_use_legacy_inventory_transaction.rs  player_block_action_data.rs  player_block_actions.rs  property_sync_data.rs  recipe_ingredient.rs  scoreboard_id.rs  serialized_abilities_data.rs  (+12 more)
crates/proto/src/version/v671/: gamepackets.rs  info.rs  mod.rs
crates/proto/src/version/v671/enums/: actor_block_sync_message_id.rs  actor_data_ids.rs  actor_flags.rs  (+7 more)
crates/proto/src/version/v685/: gamepackets.rs  info.rs  mod.rs
crates/proto/src/version/v686/: gamepackets.rs  info.rs  mod.rs
crates/proto/src/version/v712/: gamepackets.rs  info.rs  mod.rs
crates/proto/src/version/v729/: gamepackets.rs  info.rs  mod.rs
crates/proto/src/version/v748/: gamepackets.rs  info.rs  mod.rs
crates/proto/src/version/v766/: gamepackets.rs  info.rs  mod.rs
crates/proto/src/version/v776/: gamepackets.rs  info.rs  mod.rs
crates/proto/src/version/v786/: gamepackets.rs  info.rs  mod.rs
crates/proto/src/version/v800/: gamepackets.rs  helper.rs  info.rs  mod.rs
crates/proto/src/version/v818/: gamepackets.rs  helper.rs  info.rs  mod.rs
crates/proto/src/version/v819/: gamepackets.rs  helper.rs  info.rs  mod.rs
crates/proto/src/version/v827/: gamepackets.rs  helper.rs  info.rs  mod.rs
crates/proto/src/version/v844/: gamepackets.rs  helper.rs  info.rs  mod.rs
crates/proto/src/version/v859/: gamepackets.rs  helper.rs  info.rs  mod.rs
crates/proto/src/version/v898/: gamepackets.rs  helper.rs  info.rs  mod.rs
crates/proto/src/version/v924/: gamepackets.rs  helper.rs  info.rs  mod.rs
crates/proto/src/version/v944/: mod.rs
crates/proto_core/: Cargo.toml
crates/proto_core/src/: error.rs  lib.rs
crates/proto_core/src/types/: bool.rs  int.rs  option.rs  slice.rs  string.rs  tuple.rs  uuid.rs  vec.rs  xuid.rs
crates/server/: Cargo.toml
crates/server/src/: error.rs
crates/server/src/ecs/components/: connected.rs  damage.rs  health.rs
crates/server/src/login/: mod.rs
crates/server/src/server/: builder.rs  mod.rs
(+808 files in other folders)
