[package]
name = "bedrockrs_level"
version = "0.1.0"
edition = "2024"
build = "build.rs"

[features]
default = ["mojang-leveldb"]
mojang-leveldb = ["dep:cmake"]
rusty-leveldb = ["dep:rusty-leveldb"]

[[bench]]
name = "benchmark"
harness = false

[dependencies]
bedrockrs_core = { path = "../core" }
bedrockrs_shared = { path = "../shared" }
nbtx = { git = "https://github.com/bedrock-crustaceans/nbtx" }

rusty-leveldb = { version = "4.0.1", optional = true }

thiserror = "2.0"
serde = "1.0.228"
vek = "0.17.2"
byteorder = "1.5.0"
bytemuck = "1.25.0"

[dev-dependencies]
tar = "0.4.44"
flate2 = "1.1.9"
tempfile = "3.26.0"
criterion = "0.8.2"

[build-dependencies]
cmake = { version = "0.1.57", optional = true }
