[package]
name = "bedrockrs_level"
version = "0.1.0"
edition = "2024"
build = "build.rs"

[features]
default = ["mojang-leveldb"]
mojang-leveldb = ["dep:cmake"]
rusty-leveldb = ["dep:rusty-leveldb"]

[[bench]]
name = "benchmark"
harness = false

[dependencies]
bedrockrs_core = { path = "../core" }
bedrockrs_shared = { path = "../shared" }
nbtx = { workspace = true }

rusty-leveldb = { version = "4.0.1", optional = true }

thiserror = { workspace = true }
serde = { workspace = true }
vek = { workspace = true }
byteorder = { workspace = true }
bytemuck = { workspace = true }

[dev-dependencies]
tar = { workspace = true }
flate2 = { workspace = true }
tempfile = { workspace = true }
criterion = { workspace = true }

[build-dependencies]
cmake = { version = "0.1.57", optional = true }
