[package]
name = "bedrockrs_proto"
version = "0.1.0"
edition = "2024"

[dependencies]
bedrockrs_shared = { path = "../shared" }
bedrockrs_proto_core = { path = "../proto_core" }
bedrockrs_macros = { path = "../macros" }
bedrockrs_addon = { path = "../addon" }

nbtx = { workspace = true }
xuid = { workspace = true }

byteorder = { workspace = true }
varint-rs = { workspace = true }

tracing = { workspace = true }
vek = { workspace = true }
thiserror = { workspace = true }

jsonwebtoken = { workspace = true }
rand = { workspace = true }
base64 = { workspace = true }
uuid = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }

flate2 = { workspace = true }
snap = { workspace = true }

x509-cert = { workspace = true }

bitflags = { workspace = true }
serde = { workspace = true }

rak-rs = { version = "0.3", default-features = false, features = [
    "async_tokio",
    "mcpe",
] }
