[package]
name = "bedrockrs_proto"
version = "0.1.0"
edition = "2024"

[dependencies]
bedrockrs_proto_core = { path = "../proto_core" }
bedrockrs_macros = { path = "../macros" }

nbtx = { workspace = true }
byteorder = { workspace = true }
varint-rs = { workspace = true }
tracing = { workspace = true }
vek = { workspace = true }
uuid = { workspace = true }
strum = { workspace = true }
strum_macros = { workspace = true }
