[package]
name = "bedrockrs_server"
version = "0.1.0"
edition = "2024"

[dependencies]
thiserror = { workspace = true }

bedrockrs_core = { path = "../core" }
bedrockrs_shared = { path = "../shared" }
bedrockrs_proto = { path = "../proto" }

tokio = { workspace = true }
shipyard = { workspace = true, features = [
    "rayon",
    "tracing",
] }
rayon = { workspace = true }
vek = { workspace = true }

xuid = { workspace = true }

[features]
scoreboard = []
forms = []
visibility = []
